--- a/.github/workflows/check-all.yml
+++ b/.github/workflows/check-all.yml
@@ -14,6 +14,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Unlock git-crypt secrets
+        uses: sliteteam/github-action-git-crypt-unlock@1.3.0
+        env:
+          GIT_CRYPT_KEY: ${{ secrets.GIT_CRYPT_KEY }}
+
       - name: Setup Deno
         uses: denoland/setup-deno@v2
 
