--- a/.github/workflows/check-all.yml
+++ b/.github/workflows/check-all.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [main]
 
+env:
+  DENO_DIR: deno_cache
+
 jobs:
   check:
     runs-on: ubuntu-latest
@@ -21,6 +24,12 @@ jobs:
 
       - name: Setup Deno
         uses: denoland/setup-deno@v2
+
+      - name: Cache Deno dependencies
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.DENO_DIR }}
+          key: ${{ hashFiles('deno.lock') }}
 
       - name: Run check-all task
         run: deno task check-all
