--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "deno.enable": true,
-  "deno.enablePaths": ["./scripts", "./solutions/ts-deno"]
+  "deno.enablePaths": ["./scripts", "./solutions/ts"]
 }
