--- a/.github/workflows/check-all.yml
+++ b/.github/workflows/check-all.yml
@@ -36,8 +36,8 @@ jobs:
         with:
           node-version: 20
 
-      - name: Install tsx
-        run: npm install -g tsx
+      - name: Install npm dependencies
+        run: npm ci
 
       - name: Run check-all task
         run: deno task check-all
