--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
     "init": "deno run -R=io,solutions -W=io,solutions -N=adventofcode.com -E=AOC_SESSION_KEY --env-file --allow-run=cursor scripts/init.ts",
-    "check": "deno run -R=io -W=io --allow-run=deno scripts/check.ts",
+    "check": "deno run -R=io -W=io --allow-run=deno,tsx scripts/check.ts",
     "check-all": "deno run -R=io,solutions -W=io,solutions --allow-run=deno,tsx scripts/check-all.ts"
   },
   "imports": {
