--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "@std/streams": "npm:@jsr/std__streams@^1.0.8"
+    "@std/streams": "npm:@jsr/std__streams@^1.0.8",
+    "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "tsx": "^4.19.2"
   }
 }
