--- a/deno.json
+++ b/deno.json
@@ -1,15 +1,15 @@
 {
   "tasks": {
     "init": "deno run -R=io,solutions -W=io,solutions -N=adventofcode.com -E=AOC_SESSION_KEY --env-file --allow-run=cursor scripts/init.ts",
-    "check": "deno run -R=io -W=io --allow-run=deno,tsx scripts/check.ts",
-    "check-all": "deno run -R=io,solutions -W=io,solutions --allow-run=deno,tsx scripts/check-all.ts"
+    "check": "deno run -R=io -W=io --allow-run=deno,tsx,bun scripts/check.ts",
+    "check-all": "deno run -R=io,solutions -W=io,solutions --allow-run=deno,tsx,bun scripts/check-all.ts"
   },
   "imports": {
     "@b-fuze/deno-dom": "jsr:@b-fuze/deno-dom@^0.1.48",
     "@std/fs": "jsr:@std/fs@^1.0.6",
     "@std/io": "jsr:@std/io@^0.225.0",
     "@std/streams": "npm:@jsr/std__streams@^1.0.8",
-    "zod": "npm:zod@^3.23.8"
+    "zod": "npm:zod@^3.24.1"
   },
   "nodeModulesDir": "auto"
 }
